# probe

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  aio-supervisord.conf  dev-supervisord.conf  dev.Dockerfile  docker-compose.yml  fly.toml
backend/: .dockerignore  .gitignore  Cargo.toml  Rocket.toml
backend/migrations/: 20240623165617_initial.sql  20240630084238_event_to_report.sql  20240630091214_report_id_to_ubigint.sql  20240630191059_report_add_when.sql  20240707145524_report_add_resolve_status.sql  20240713080703_users.sql  20240714152509_projects.sql
backend/src/: main.rs  utils.rs
backend/src/actors/: ai_actor.rs  dep_scanner.rs  github_actor.rs  mod.rs  npm_actor.rs
backend/src/controllers/: mod.rs
backend/src/models/: mod.rs
frontend/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/components/: FileUploadDialog.vue  Header.vue  LoadingScreen.vue
frontend/components/button/: Primary.vue
frontend/pages/: index.vue  insights.vue  test-table.vue
