[package]
name = "fosshack_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
hmac = "0.12.1"
jwt = "0.16.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.5", features = ["json"] }
rocket = { version = "0.5.1", features = ["json", "uuid"] }
rocket_cors = "0.6.0"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
rocket_oauth2 = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
sqlx = { version = "0.7.4", default-features = false, features = ["ipnetwork", "json", "macros", "migrate", "uuid"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
